--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pl" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title></title>
   </head>
   <body>
@@ -13,10 +14,10 @@
       <aside class="sidebar">
         <h2 class="section-title">All posts</h2>
         <ul class="list titles">
-          <li><a href="#article-1" class="active"><span>Article 1</span></a></li>
+          <li><a href="#article-1"><span>Article 1</span></a></li>
           <li><a href="#article-2"><span>Article 2</span></a></li>
           <li><a href="#article-3"><span>Article 3</span></a></li>
-          <li><a href="#article-4"><span>Article 4</span></a></li>
+          <li><a href="#article-4" class="active"><span>Article 4</span></a></li>
           <li><a href="#article-5"><span>Article 5</span></a></li>
           <li><a href="#article-6"><span>Article 6</span></a></li>
           <li><a href="#article-7"><span>Article 7</span></a></li>
